--- a/pythonclub/club/templates/base.html
+++ b/pythonclub/club/templates/base.html
@@ -18,8 +18,8 @@
                 <a class="navbar-brand" href="{% url 'index' %}">Python Club</a>
             </div>
             <ul class="nav navbar-nav">
-                <li>Dummy</li>
-                <li>Dummy</li>
+                <li><a href="{% url 'posttypes' %}">Types</a></li>
+                <li><a href="">Dummy</a></li>
             </ul>
         </div>
     </nav>
