--- a/pythonclub/club/templates/base.html
+++ b/pythonclub/club/templates/base.html
@@ -19,6 +19,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'resources' %}">Resources</a></li>
+                <li><a href="{% url 'getevents' %}">Events</a></li>
                 <li><a href="">Dummy</a></li>
             </ul>
         </div>
