Events and Details minor edits

--- a/pythonclub/club/templates/club/details.html
+++ b/pythonclub/club/templates/club/details.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-
-
 <h2>
-    <a href=""></a>
-    {{detail.eventname}}
+    <a href="">
+    <!--placeholder for next step | pythonclub version of product reviews-->
+    {{detail.eventname}}</a>
 </h2>
 <p>{{detail.user}}</p>
 <p>{{detail.evententrydate}}</p>
