--- a/pythonclub/club/templates/club/events.html
+++ b/pythonclub/club/templates/club/events.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<!-- This is a comment -->
-
+<!-- leads to http://127.0.0.1:8000/club/eventdetail/1 -->
 <h2>Events</h2>
 <table class="table">
     <tr>
