--- a/pythonclub/club/templates/base.html
+++ b/pythonclub/club/templates/base.html
@@ -20,6 +20,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'resources' %}">Resources</a></li>
                 <li><a href="{% url 'getevents' %}">Events</a></li>
+                <li><a href="{% url 'newevent' %}">Add Events</a></li>
                 <li><a href="">Dummy</a></li>
             </ul>
         </div>
