--- a/pythonclub/club/templates/base.html
+++ b/pythonclub/club/templates/base.html
@@ -21,6 +21,8 @@
                 <li><a href="{% url 'resources' %}">Resources</a></li>
                 <li><a href="{% url 'getevents' %}">Events</a></li>
                 <li><a href="{% url 'newevent' %}">Add Events</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
                 <li><a href="">Dummy</a></li>
             </ul>
         </div>
